# rspress-plugin-comments

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
backend/: .env.example  README.md  package.json  pnpm-lock.yaml
backend-rust/: Cargo.toml  README.md
backend-rust/src/: main.rs
backend/scripts/: start-with-env.mjs
backend/src/: server.mjs  store.mjs
src/: index.ts
src/markdown/: rehypeCommentableBlocks.ts
src/runtime/: BlockComments.tsx  CommentsPanel.tsx  GiscusWidget.tsx  LogtoRuntime.tsx  PageComments.tsx  api.ts  shared.ts  styles.css  types.ts
